@@ -344,7 +344,7 @@ public:
      *                         fill the result image
      *  @param childShaderName The name of the child shader defined in the builder that will be
      *                         bound to the input param (or the source image if the input param
-     *                         is null).  If null the builder can have exactly one child shader,
+     *                         is null).  If null, the builder can have exactly one child shader,
      *                         which automatically binds the input param.
      *  @param input           The image filter that will be provided as input to the runtime
      *                         shader. If null the implicit source image is used instead
@@ -369,7 +369,7 @@ public:
      *  @param inputCount       How many entries are present in 'childShaderNames' and 'inputs'.
      */
     static sk_sp<SkImageFilter> RuntimeShader(const SkRuntimeShaderBuilder& builder,
-                                              const char* childShaderNames[],
+                                              std::string_view childShaderNames[],
                                               const sk_sp<SkImageFilter> inputs[],
                                               int inputCount);
 #endif  // SK_ENABLE_SKSL
