@@ -26,14 +26,17 @@ public:
                          sk_sp<SkData> uniforms,
                          sk_sp<SkImageFilter> input)
             : INHERITED(&input, 1, /*cropRect=*/nullptr)
-            , fShaderBuilder(std::move(effect), std::move(uniforms))
-            , fChildShaderNames(&fShaderBuilder.effect()->children().front().name, 1) {}
+            , fShaderBuilder(std::move(effect), std::move(uniforms)) {
+        std::string_view childName = fShaderBuilder.effect()->children().front().name;
+        fChildShaderNames.push_back(SkString(childName));
+    }
     SkRuntimeImageFilter(const SkRuntimeShaderBuilder& builder,
-                         const char* childShaderNames[],
+                         std::string_view childShaderNames[],
                          const sk_sp<SkImageFilter> inputs[],
                          int inputCount)
             : INHERITED(inputs, inputCount, /*cropRect=*/nullptr)
             , fShaderBuilder(builder) {
+        fChildShaderNames.reserve_back(inputCount);
         for (int i = 0; i < inputCount; i++) {
             fChildShaderNames.push_back(SkString(childShaderNames[i]));
         }
@@ -99,7 +102,7 @@ sk_sp<SkFlattenable> SkRuntimeImageFilter::CreateProc(SkReadBuffer& buffer) {
     }
 
     // Read the child shader names
-    SkSTArray<4, const char*> childShaderNames;
+    SkSTArray<4, std::string_view> childShaderNames;
     SkSTArray<4, SkString> childShaderNameStrings;
     childShaderNames.resize(common.inputCount());
     childShaderNameStrings.resize(common.inputCount());
@@ -111,8 +114,8 @@ sk_sp<SkFlattenable> SkRuntimeImageFilter::CreateProc(SkReadBuffer& buffer) {
     SkRuntimeShaderBuilder builder(std::move(effect), std::move(uniforms));
 
     // Populate the builder with the corresponding children
-    for (auto& child : builder.effect()->children()) {
-        const char* name = child.name.c_str();
+    for (const SkRuntimeEffect::Child& child : builder.effect()->children()) {
+        std::string_view name = child.name;
         switch (child.type) {
             case SkRuntimeEffect::ChildType::kBlender: {
                 builder.child(name) = buffer.readBlender();
@@ -133,8 +136,8 @@ sk_sp<SkFlattenable> SkRuntimeImageFilter::CreateProc(SkReadBuffer& buffer) {
         return nullptr;
     }
 
-    return SkImageFilters::RuntimeShader(
-            builder, childShaderNames.data(), common.inputs(), common.inputCount());
+    return SkImageFilters::RuntimeShader(builder, childShaderNames.data(),
+                                         common.inputs(), common.inputCount());
 }
 
 void SkRuntimeImageFilter::flatten(SkWriteBuffer& buffer) const {
@@ -223,40 +226,43 @@ static bool child_is_shader(const SkRuntimeEffect::Child* child) {
 sk_sp<SkImageFilter> SkImageFilters::RuntimeShader(const SkRuntimeShaderBuilder& builder,
                                                    const char* childShaderName,
                                                    sk_sp<SkImageFilter> input) {
-    // if no childShaderName is provided check to see if we can implicitly assign it to the only
-    // child in the effect
-    if (childShaderName == nullptr) {
+    // If no childShaderName is provided, check to see if we can implicitly assign it to the only
+    // child in the effect.
+    std::string_view childShaderNameView;
+    if (childShaderName != nullptr) {
+        childShaderNameView = childShaderName;
+    } else {
         auto children = builder.effect()->children();
         if (children.size() != 1) {
             return nullptr;
         }
-        childShaderName = children.front().name.c_str();
+        childShaderNameView = children.front().name;
     }
 
-    return SkImageFilters::RuntimeShader(builder, &childShaderName, &input, 1);
+    return SkImageFilters::RuntimeShader(builder, &childShaderNameView, &input, 1);
 }
 
 sk_sp<SkImageFilter> SkImageFilters::RuntimeShader(const SkRuntimeShaderBuilder& builder,
-                                                   const char* childShaderNames[],
+                                                   std::string_view childShaderNames[],
                                                    const sk_sp<SkImageFilter> inputs[],
                                                    int inputCount) {
     for (int i = 0; i < inputCount; i++) {
-        const char* name = childShaderNames[i];
-        // All names must be non-null, and present as a child shader in the effect:
-        if (!name || !child_is_shader(builder.effect()->findChild(name))) {
+        std::string_view name = childShaderNames[i];
+        // All names must be non-empty, and present as a child shader in the effect:
+        if (name.empty() || !child_is_shader(builder.effect()->findChild(name))) {
             return nullptr;
         }
 
         // We don't allow duplicates, either:
         for (int j = 0; j < i; j++) {
-            if (!strcmp(name, childShaderNames[j])) {
+            if (name == childShaderNames[j]) {
                 return nullptr;
             }
         }
     }
 
-    return sk_sp<SkImageFilter>(
-            new SkRuntimeImageFilter(builder, childShaderNames, inputs, inputCount));
+    return sk_sp<SkImageFilter>(new SkRuntimeImageFilter(builder, childShaderNames,
+                                                         inputs, inputCount));
 }
 
 #endif  // SK_ENABLE_SKSL
