@@ -307,13 +307,14 @@ private:
         SkASSERTF(uIter == uEnd,
                   "Expected more uniforms, starting with '%.*s'",
                   (int)uIter->name.size(), uIter->name.data());
-        SkASSERTF(cIter == cEnd, "Expected more children, starting with '%s'", cIter->name.c_str());
+        SkASSERTF(cIter == cEnd, "Expected more children, starting with '%.*s'",
+                  (int)cIter->name.size(), cIter->name.data());
     }
     static void checkOneChild(child_iterator cIter, child_iterator cEnd, const char* name) {
         SkASSERTF(cIter != cEnd, "Too many children, wasn't expecting '%s'", name);
-        SkASSERTF(cIter->name.equals(name),
-                  "Expected child '%s', got '%s' instead",
-                  cIter->name.c_str(), name);
+        SkASSERTF(cIter->name == name,
+                  "Expected child '%.*s', got '%s' instead",
+                  (int)cIter->name.size(), cIter->name.data(), name);
     }
     template <typename... Args>
     static void checkArgs(uniform_iterator uIter,
