@@ -237,14 +237,16 @@ void SkSLSlide::draw(SkCanvas* canvas) {
         }
     }
 
-    for (const auto& c : fEffect->children()) {
-        auto curShader =
-                std::find_if(fShaders.begin(), fShaders.end(), [tgt = fChildren[c.index]](auto p) {
+    for (const SkRuntimeEffect::Child& c : fEffect->children()) {
+        auto curShader = std::find_if(
+                fShaders.begin(),
+                fShaders.end(),
+                [tgt = fChildren[c.index]](const std::pair<const char*, sk_sp<SkShader>>& p) {
                     return p.second == tgt;
                 });
         SkASSERT(curShader != fShaders.end());
 
-        if (ImGui::BeginCombo(c.name.c_str(), curShader->first)) {
+        if (ImGui::BeginCombo(std::string(c.name).c_str(), curShader->first)) {
             for (const auto& namedShader : fShaders) {
                 if (ImGui::Selectable(namedShader.first, curShader->second == namedShader.second)) {
                     fChildren[c.index] = namedShader.second;
